--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <header class="text-gray-600 body-font">
             <div class="container mx-auto flex flex-wrap p-2 flex-col md:flex-row items-center">
                 <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <img src="./Images/SuryabalaLogo.jpg" alt="" class="headerLogo" width="45rem">
                     </a>
                     <a class="ml-3 text-xl font-bold">Net Zero Hybrid AC-DC microgrid</a>
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                     <a class="mr-5 hover:text-green-300 text-green-400  cursor-pointer font-semibold"
-                        href="/index.html">Home</a>
+                        href="index.html">Home</a>
                     <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold">New Building</a>
                     <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold"
-                        href="/BuildingAnalytics.html">Building Analytics</a>
+                        href="BuildingAnalytics.html">Building Analytics</a>
                     <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold">Energy
                         Calculator</a>
-                        <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold" href="/Insights.html">Insights</a>
+                        <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold" href="Insights.html">Insights</a>
                     </nav>
             </div>
         </header>
