--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </h1>
                 <p class="px-8 mt-8 mb-12 text-lg">" One unit energy saved equals two units energy generated . "</p>
                 <div class="flex flex-wrap justify-center">
-                    <a href="/BuildingAnalytics.html">
+                    <a href="BuildingAnalytics.html">
                         <button
                             class="px-8 py-3 m-2 text-lg font-semibold rounded dark:bg-green-400 dark:text-gray-900">Get
                             started</button>
