--- a/Insights.html
+++ b/Insights.html
@@ -137,7 +137,7 @@
     <div id="controller-btn"></div>
     <div class="wrapper">
         <div class="wrapper-icon">
-            <img src="./images/washing-machine.jpg" alt="washing-machine" height="50px">
+            <img src="./Images/washing-machine.jpg" alt="washing-machine" height="50px">
         </div>
         <div class="wrapper-controller">
             <div class="wrapper-performance">
@@ -164,7 +164,7 @@
     </div>
     <div class="wrapper">
         <div class="wrapper-icon">
-            <img src="./images/dish-washer.jpg" alt="dish-washer">
+            <img src="./Images/dish-washer.jpg" alt="dish-washer">
         </div>
         <div class="wrapper-controller">
             <div class="wrapper-performance">
@@ -190,7 +190,7 @@
     </div>
     <div class="wrapper">
         <div class="wrapper-icon">
-            <img src="./images/water-pump.jpg" alt="water-pump">
+            <img src="./Images/water-pump.jpg" alt="water-pump">
         </div>
         <div class="wrapper-controller">
             <div class="wrapper-performance">
@@ -216,7 +216,7 @@
     </div>
     <div class="wrapper">
         <div class="wrapper-icon">
-            <img src="./images/e-drive-charger.jpg" alt="e-drive-charger">
+            <img src="./Images/e-drive-charger.jpg" alt="e-drive-charger">
         </div>
         <div class="wrapper-controller">
             <div class="wrapper-performance">
@@ -244,7 +244,7 @@
     </div>
     <div class="wrapper">
         <div class="wrapper-icon">
-            <img src="./images/switch.jpg" alt="">
+            <img src="./Images/switch.jpg" alt="">
         </div>
         <div class="wrapper-controller">
             <div class="wrapper-performance">
@@ -269,7 +269,7 @@
     </div>
     <div class="wrapper">
         <div class="wrapper-icon">
-            <img src="./images/table-lamp.jpg" alt="table-lamp">
+            <img src="./Images/table-lamp.jpg" alt="table-lamp">
         </div>
         <div class="wrapper-controller">
             <div class="wrapper-performance">
