--- a/BuildingAnalytics.html
+++ b/BuildingAnalytics.html
@@ -179,7 +179,7 @@
                         <h5 class="card-title text-center">Auxiliary Load Live Current</h5>
                         <center>
                             <iframe width="450" height="260" style="border: 1px solid #cccccc;"
-                                src="https://thingspeak.com/channels/1854887/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
+                                src="https://thingspeak.com/channels/2087596/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&title=Smart+Plug&type=line&yaxis=Live+Current"></iframe>
                         </center>
                     </div>
                 </div>
