--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div
                 class="container mx-auto flex flex-col items-center px-4 py-16 text-center md:py-32 md:px-10 lg:px-32 xl:max-w-3xl">
                 <h1 class="text-4xl font-bold leading-none sm:text-5xl">One Product
-                    <span class="dark:text-green-400">Many</span> Solution
+                    <span class="dark:text-green-400">Many</span> Solutions
                 </h1>
                 <p class="px-8 mt-8 mb-12 text-lg">" One unit energy saved equals two units energy generated . "</p>
                 <div class="flex flex-wrap justify-center">
