--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold">New Building</a>
                     <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold"
                         href="BuildingAnalytics.html">Building Analytics</a>
-                    <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold">Energy
+                    <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold"
+                        href = "home_energy.html" >Energy
                         Calculator</a>
                         <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold" href="Insights.html">Insights</a>
                     </nav>
