--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                     <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold"
                         href="BuildingAnalytics.html">Building Analytics</a>
                     <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold"
-                        href = "home_energy.html" >Energy
-                        Calculator</a>
+                        href="home_energy.html">Energy calculator</a>
                         <a class="mr-5 hover:text-gray-600 text-gray-900  cursor-pointer font-semibold" href="Insights.html">Insights</a>
                     </nav>
             </div>
