--- a/BuildingAnalytics.html
+++ b/BuildingAnalytics.html
@@ -163,8 +163,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">AC Load live Current</h5>
                         <center>
-                            <iframe width="450" height="260" style="border: 1px solid #cccccc;"
-                                src="https://thingspeak.com/channels/2087596/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&title=Smart+Plug&type=line"></iframe>
+                            <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2380790/charts/1?bgcolor=%23ffffff&color=%23d62020&results=10"></iframe>
                         </center>
                     </div>
                 </div>
